# dmm

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.config/: config.ron
assets/: dmm.default.ron  dmm.minimal.ron  example-playlist.ron  gitignore
examples/: dmm.ron
examples/playlists/: christmas.ron
examples/sources/: yt-dlp.ron
src/: action.rs  app.rs  cache.rs  cfg.rs  components.rs  init.rs  log.rs  main.rs  output.rs  panic.rs  player.rs  player2.rs  project_meta.rs  resolver.rs  schema.rs  symbol.rs  ui.rs  waker.rs
src/components/: fps.rs  home.rs
src/player/: output.rs  player.rs
src/ui/: action.rs  app.rs  components.rs  symbol.rs  tui.rs
src/ui/components/: fps.rs  home.rs
src/ui/components/home/: draw.rs
