[package]
name = "dmm"
version = "0.2.1"
edition = "2021"
authors = [ "Rowan S-L <r@fawkes.io>" ]
description = "DMM - The Declarative Music Manager"
repository = "https://git.fawkes.io/mtnash/dmm"
homepage = "https://git.fawkes.io/mtnash/dmm"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "wrap_help", "cargo", "unicode", "string", "unstable-styles"] }
heck = "0.4"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
notify-rust = "4.10"
symphonia = { version = "0.5", features = ["mp3"] }
cpal = "0.15"
rb = "0.4"
ratatui = { version = "0.24", features = ["serde", "macros"] }
flume = "0.11"
fuzzy-matcher = "0.3"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
lazy_static = "1.4"
color-eyre = "0.6"
log = "0.4"
better-panic = "0.3"
strip-ansi-escapes = "0.2"
human-panic = "1.2"
crossterm = { version = "0.27", features = ["serde"] }
config = "0.13"
derive_deref = "1.1"
rand = "0.8"
num_enum = "0.7"
static_assertions = "1.1.0"
const_cmp = "0.0.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
