[package]
name = "dmm"
version = "0.6.0"
edition = "2021"
authors = [ "Rowan S-L <r@fawkes.io>" ]
description = "The Declarative Music Manager"
#TODO: make webpage for the DMM docs?
homepage = "https://git.fawkes.io/mtnash/dmm"
repository = "https://git.fawkes.io/mtnash/dmm"
documentation = "https://git.fawkes.io/mtnash/dmm"
readme = "README.md"
license = "GPL-3.0"
keywords = [ "music", "audio", "player" ]
categories = [ ]
build = "build.rs"
exclude = [ "/flake.nix", "/flake.lock" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help", "cargo", "unicode", "string", "unstable-styles"] }
heck = "0.5"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
notify-rust = "4.11"
symphonia = { version = "0.5", features = ["mp3"] }
cpal = "0.15"
rb = "0.4"
ratatui = { version = "0.26", features = ["serde", "macros"] }
flume = "0.11"
fuzzy-matcher = "0.3"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
lazy_static = "1"
color-eyre = "0.6"
log = "0.4"
better-panic = "0.3"
strip-ansi-escapes = "0.2"
human-panic = "1.2"
crossterm = { version = "0.27", features = ["serde"] }
config = "0.14"
derive_deref = "1"
rand = "0.8"
num_enum = "0.7"
static_assertions = "1"
const_cmp = "0.0.0"
highway = "1"
base64 = "0.22"
thiserror = "1"
derivative = "2"

[profile.release]
lto = true
